feat: optimize backup process with direct streaming to ZIP and enhanced metadata handling